<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/mainScreen"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F7DA21">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/beeLogoImage"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/bee_logo"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/txt_bee_logo"/>

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0sp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/appName"
            android:textSize="40sp"
            android:textColor="#000000"
            android:fontFamily="@font/alfa_slab_one"/>

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_height="match_parent"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:padding="8sp"
            android:contentDescription="@string/txt_gear_icon"
            android:src="@drawable/gear"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>

    <Button
        android:id="@+id/NYTLoadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/todays_problem_nyt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <!-- Single character input -->
        <EditText
            android:id="@+id/singleCharInput"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:imeOptions="actionNext"
            android:hint="@string/center"
            android:importantForAutofill="no" />

        <!-- Remaining characters -->
        <EditText
            android:id="@+id/manyCharsInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:imeOptions="actionSend"
            android:hint="@string/other_letters"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:importantForAutofill="no"
            android:privateImeOptions="nm"/>

        <!--Send button -->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/find_matches"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:paddingTop="0sp"
            android:paddingBottom="4sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:contentDescription="@string/results_list_description">

        <TableLayout
            android:id="@+id/resultsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="0sp">
        </TableLayout>
    </ScrollView>

</LinearLayout>

<FrameLayout
android:id="@+id/fragment_container"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>